Change vector functions to list functions