@@ -154,7 +154,7 @@ public class DATConvert {
     protected void processAttrValuesPairs() throws IOException {
         csvWriter.print(",");
         if (attrValuePairs.size() > 0) {
-            AttrValuePair avp = attrValuePairs.removeFirst();
+            AttrValuePair avp = attrValuePairs.remove(0);
             csvWriter.print(avp.getAttr() + "|" + avp.getValue());
         }
     }
@@ -285,7 +285,6 @@ public class DATConvert {
                 }
             }
         }
-
     }
 
 
